Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11584

GRANT inside an SP does not work well on 2nd execution

    XMLWordPrintable

Details

    • 10.2.4-5

    Description

      I run this script:

      DROP PROCEDURE IF EXISTS sp1;
      CREATE PROCEDURE sp1()
        GRANT ALL PRIVILEGES ON *.* TO 'foo'@'%' IDENTIFIED BY 'pass';
      CALL sp1();
      

      It seems to work fine.
      However, if I call sp1() for the second time, it returns a strange warning:

      CALL sp1();
      SHOW WARNINGS;
      

      +---------+------+--------------------------------------------------------------------------------------+
      | Level   | Code | Message                                                                              |
      +---------+------+--------------------------------------------------------------------------------------+
      | Warning | 1366 | Incorrect string value: '\xA5\xA5\xA5\xA5\xA5\xA5...' for column 'Password' at row 1 |
      +---------+------+--------------------------------------------------------------------------------------+
      

      Attachments

        Activity

          People

            sanja Oleksandr Byelkin
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.