MDEV-11584: GRANT inside an SP does not work well on 2nd execution

Allocate password hash in statment memory